--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ streamlit==1.22.0
 streamlit-apexjs==0.0.3
 streamlit-card==0.0.4
 streamlit-elements==0.1.0
-streamlit-option-menu==0.3.2
+streamlit-option-menu
 streamlit-pandas-profiling==0.1.3
 plotly==5.14.1
 plotly-express==0.4.1
